# cpp-starter-template

./: CMakeLists.txt  README.md  conanfile.py
apps/main/: CMakeLists.txt  main.cpp
libs/example/: CMakeLists.txt
libs/example/src/example/: example.cpp  example.h
libs/example/test/: CMakeLists.txt  example.test.cpp
